# lilla

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
backend-warp/: .19_3_env  .dev_env  .env  Cargo.toml
backend-warp/data/: 20211227_ost.json
backend-warp/dev_data/: ost.json
backend-warp/src/: command.rs  command_args.rs  common_handlers.rs  lib.rs  local_state.rs  trivial_handlers.rs
backend-warp/src/expulsions/: filters.rs
backend-warp/src/feedings/: handlers.rs
backend-warp/src/persons/: handlers.rs
backend/data/: ost.json
backend/src/: common_filters.rs  lib.rs
backend/src/events/: filters.rs
backend/src/expulsions/: handlers.rs
backend/src/servers/: production_server.rs
backend/tests/: ost_admin_context.rs  ost_feedings.rs  ost_persons.rs
frontend/: .gitignore  Cargo.toml
frontend-19-3/: Cargo.toml  index.html
frontend-19-3/pre-built/: index-66e1f6d00c4afed5.js  index-66e1f6d00c4afed5_bg.wasm  index.html
frontend-19-3/src/: main.rs  web_sys_utils.rs
frontend-19-3/src/components/: daily_summary.rs  event_listing.rs  fetcher.rs  insert_event.rs  insert_expulsions.rs  insert_feedings.rs  mod.rs  quick_insert.rs  settings_individuals.rs  summary_feedings_individual.rs  summary_feedings_individual_all_time.rs
frontend-19-3/src/pages/: page_details.rs  page_main.rs  page_settings.rs  page_summary.rs
frontend/pre-built/: index-307e184989cbc469.js  index-307e184989cbc469_bg.wasm  index-3114cf97500f9192.js  index-3114cf97500f9192_bg.wasm  index-52c350e1e1d21193.js  index-52c350e1e1d21193_bg.wasm  index.html
frontend/src/components/: event_listing.rs  insert_event.rs  summary_on_date.rs  summary_person_feedings_on_date.rs
frontend/src/pages/: mod.rs  page_main.rs  page_settings.rs  routes.rs
lillaOst/: Cargo.toml
lillaOst/backend/: .dev_env  .env  .gitignore  Cargo.toml
lillaOst/backend/src/: lib.rs  local_state.rs  local_state_fake_in_memory.rs  static_file_filters.rs
lillaOst/backend/src/admin/: filters.rs  handlers.rs
lillaOst/backend/src/events/: handlers.rs
lillaOst/backend/src/feedings/: filters.rs
lillaOst/backend/src/persons/: filters.rs
lillaOst/backend/src/servers/: faked_context_server.rs  faked_ost_api.rs  mod.rs
lillaOst/backend/tests/: ost_admin_context.rs  ost_feedings.rs  ost_persons.rs
lillaOst/frontend/: index.html
lillaOst/frontend/pre-built/: index.html
lillaOst/frontend/src/: root_spa.rs
lillaOst/ost/: Cargo.toml
lillaOst/ost/custom_tests/: custom_context_remote.rs
lillaOst/ost/src/: communications.rs  context_remote_async.rs  event_base.rs  event_key.rs  expulsion.rs  (+2 more)
lillaTelly/: Cargo.toml  README.md
lillaTelly/src/: lib.rs  main.rs  source_files.rs  source_target_configuration.rs  target_files.rs  target_tv_show.rs  task_tv_show.rs
lillaTelly/test_data/configurations/: sample_00.json
lillaTelly/tests/: scaffolding.rs  source_target_configuration.rs  task_tv_show.rs
ost/: Cargo.toml
ost/src/: context.rs  event.rs  lib.rs  person_key.rs
ost/src/context_impl/: context_persistence_in_memory.rs  context_persistence_json_string.rs  context_persistence_single_file.rs  context_redis.rs
ost/src/entity_impl/: event_impl.rs  expulsion_impl.rs  remote_expulsion_impl.rs  remote_feed_impl.rs
ost/test_data/: monolith_empty.json
ost/tests/: context_consumer.rs  context_external_key.rs  context_remote.rs  removing_entities.rs  test_events.rs  test_fake_data.rs  test_feedings.rs
(+33 files in other folders)
