[package]
name = "frontend-19-3"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = [
    "serde",
    "unstable-locales",
    "wasmbind",
] }
chrono-tz = "0.5.3"

getrandom = { version = "0.2.3", features = ["js"] }

itertools = "0.10.1"

rand = "0.8.4"
fake = { version = "2.4.0", features = ["chrono", "derive"] }

js-sys = "0.3.51"

ost = { path = "../ost" }

plotters = { version = "0.3.1", features = ["chrono"] }
plotters-canvas = "0.3.0"

serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

gloo-console = "0.2.1"
gloo-utils = "0.1"

yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"

yewtil = "0.4.0"

wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Event",
    'HtmlCanvasElement',
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
