[package]
name = "lillatelly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

# eframe = "0.18.0"

pretty_env_logger = "0.4.0"

regex = "1.5.6"

serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.81"

thiserror = "1.0.30"
