[package]
name = "ost"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
chrono-tz = "0.5.3"

fake = { version = "2.4.0", features = ["chrono", "derive"] }

gloo-storage = "0.2.0" # Context persistence local storage 
gloo-utils = "0.1.1"

rand = "0.8.4"

reqwest = { version = "0.11.6", features = ["blocking"] }

serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
