[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
chrono-tz = "0.5.3"

dotenv = "0.15.0"

log = "0.4.14"

ost = { path = "../ost" }

pretty_env_logger = "0.4.0"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
serde_urlencoded = "0.7.0"

tokio = { version = "1.14.0", features = ["full"] }
tracing-log = "0.1.2"

warp = "0.3.1"
